--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="albionRed">#FF0000</color>
-    <color name="midgardBlue">#0000FF</color>
-    <color name="hiberniaGreen">#00FF00</color>
+    <color name="albionRed">#F44336</color>
+    <color name="midgardBlue">#2196F3</color>
+    <color name="hiberniaGreen">#4CAF50</color>
     <color name="delimiter">#000000</color>
     <color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDark">#8b1616</color>
