--- a/app/src/main/res/layout/sliding_tab_item_view.xml
+++ b/app/src/main/res/layout/sliding_tab_item_view.xml
@@ -11,7 +11,7 @@
 
     <TextView
         android:id="@android:id/text1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/tab_padding"
         android:paddingBottom="@dimen/tab_padding"
